# VulkanTemplate

./: CMakeLists.txt  README.md
Renderer/: CMakeLists.txt
Renderer/src/: main.cpp
Renderer/src/Core/Application/: Application.cpp  Application.h
Renderer/src/Core/Errors/: VulkanErrors.cpp  VulkanErrors.h
Renderer/src/Core/Logger/: Logger.cpp  Logger.h
Renderer/src/Core/Vulkan/: VulkanApplication.cpp  VulkanApplication.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanValidation.cpp  VulkanValidation.h
Renderer/src/Core/Vulkan/Helpers/: Helpers.cpp  Helpers.h  Queues.h
Renderer/src/Core/Vulkan/Shaders/: Compiler.cpp  Compiler.h
Renderer/src/Core/Window/: Window.cpp  Window.h
scripts/: compile.bat
